feat: [FE] 캘린더 페이지, 셋팅 페이지 오류 발생 알림 스타일 수정

--- a/settings.html
+++ b/settings.html
@@ -295,7 +295,7 @@
 
                         <div class="example-box">
                             <p><strong>예시:</strong><br>
-                            캘린더: 10월 2일 오전 10시 – 마케팅 전략 회의<br>
+                            캘린더: 10월 2일 오전 10시 - 마케팅 전략 회의<br>
                             업무: [김영희] 보고서 초안 작성</p>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                         <h4>효과적인 서비스 활용 방법</h4>
                         
                         <div class="feature-box">
-                            <strong>📝 회의 전 준비</strong>
+                            <strong> 회의 전 준비</strong>
                             <ul>
                                 <li>개인정보 설정에서 직무를 미리 선택해두면 맞춤형 요약을 받을 수 있습니다</li>
                                 <li>중요하게 추적하고 싶은 키워드를 미리 설정해보세요</li>
@@ -322,7 +322,7 @@
                         </div>
 
                         <div class="feature-box">
-                            <strong>🎙️ 회의 중 활용</strong>
+                            <strong> 회의 중 활용</strong>
                             <ul>
                                 <li>명확한 발화를 위해 한 번에 한 사람씩 말하도록 권장합니다</li>
                                 <li>중요한 결정사항이나 액션 아이템은 강조하여 말하면 더 잘 인식됩니다</li>
@@ -331,7 +331,7 @@
                         </div>
 
                         <div class="feature-box">
-                            <strong>📊 회의 후 관리</strong>
+                            <strong> 회의 후 관리</strong>
                             <ul>
                                 <li>회의록 상세 페이지에서 하이라이트된 내용을 먼저 확인하세요</li>
                                 <li>PDF로 내보내기하여 팀원들과 공유할 수 있습니다</li>
@@ -341,7 +341,7 @@
                         </div>
 
                         <div class="feature-box">
-                            <strong>💡 챗봇 활용 팁</strong>
+                            <strong> 챗봇 활용 팁</strong>
                             <ul>
                                 <li>"지난주 마케팅 회의에서 논의된 예산은?"처럼 구체적으로 질문하세요</li>
                                 <li>"김영희님이 맡은 업무가 뭐였지?"와 같이 담당자 기준으로도 검색 가능합니다</li>
