--- a/calendar.html
+++ b/calendar.html
@@ -107,13 +107,30 @@
         </main>
     </div>
     <div id="googleLinkModal" class="modal-overlay">
-  <div class="modal-content">
-    <button id="closeModalBtn" class="modal-close-btn">&times;</button>
-    <h3>Google 계정 연동 필요</h3>
-    <p>캘린더 일정을 불러오려면 Google 계정 연동이 필요합니다. 지금 연동하시겠습니까?</p>
-    <button id="conn-google-btn" class="cta-btn">Google 계정 연동하기</button>
-  </div>
-</div>
+        <div class="modal-container">
+            
+            <div class="modal-header">
+                <h3>Google 계정 연동 필요</h3>
+                <button id="closeModalBtn" class="close-btn">x</button>
+            </div>
+
+            <div class="modal-body google-auth-body">
+                <div class="auth-icon">🔗</div>
+                <p class="auth-text">
+                    캘린더 일정을 불러오려면<br>
+                    <strong>Google 계정 연동</strong>이 필요합니다.<br>
+                    지금 연동하시겠습니까?
+                </p>
+            </div>
+
+            <div class="modal-footer">
+                <button id="conn-google-btn" class="edit-modal-btn confirm full-width">
+                    Google 계정 연동하기
+                </button>
+            </div>
+
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- JavaScript 파일 로드 -->
     <script src="static/js/app.js"></script>
