--- a/dashboard.html
+++ b/dashboard.html
@@ -9,14 +9,12 @@
 </head>
 <body>
   <div class="container">
-    <!-- Sidebar Trigger Zone -->
     <div class="sidebar-trigger"></div>
-    <!-- Sidebar (fetch로 불러올 자리) -->
     <div id="sidebar-container"></div>
 
-    <!-- Main Content -->
     <main class="main-content">
       <div id="adminDashboardPage" class="content-wrapper">
+        
         <div class="page-header">
           <h2>관리자 페이지</h2>
           <p id="current-date-display">전체 서비스 현황을 한눈에 파악하세요</p>
@@ -36,9 +34,8 @@
             </button>
           </div>
         </div>
-        <!-- 관리자 주요 정보 카드 1열 -->
+
         <div class="two-col-grid">
-          <!-- 가입자 통계 카드 -->
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">가입자 통계</h3>
@@ -48,7 +45,7 @@
               <div class="user-stats-diff" style="margin-top:7px; color:#7E22CE;">+0 (최근 7일)</div>
             </div>
           </div>
-          <!-- 전체 회의수 카드 -->
+
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">전체 회의 수</h3>
@@ -59,62 +56,42 @@
             </div>
           </div>
         </div>
-        <!-- 관리자 통계/알림/월별 현황 -->
-        <div class="stats-grid">
-          <div class="stat-card">
-            <div class="stat-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-                <path d="M16 2v4M8 2v4M3 10h18" />
-              </svg>
+
+        <div class="two-col-grid" style="margin-top: 1.5rem;">
+          
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">
+                <svg style="vertical-align: text-bottom; margin-right: 5px;" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                  <path d="M16 2v4M8 2v4M3 10h18" />
+                </svg>
+                오늘 생성 회의
+              </h3>
             </div>
-            <div class="stat-label">오늘 생성 회의</div>
-            <div class="stat-value-row">
-              <div id="todayCreateMeetCount" class="stat-value">-</div>
-              <div class="stat-change">+1</div>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <circle cx="12" cy="12" r="10" />
-                <path d="M12 6v6l4 2" />
-              </svg>
-            </div>
-            <div class="stat-label">오늘 신규가입</div>
-            <div class="stat-value-row">
-              <div id="todayRegisterUserCount" class="stat-value">-</div>
-              <div class="stat-change">+2</div>
+            <div class="meeting-list">
+              <div id="todayCreateMeetCount" style="font-size:2rem; font-weight:700;">-</div>
+              <div style="margin-top:7px; color:#7E22CE;">+1</div>
             </div>
           </div>
-          <div class="stat-card">
-            <div class="stat-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M9 12l2 2 4-4" />
-                <circle cx="12" cy="12" r="10" />
-              </svg>
+
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">
+                <svg style="vertical-align: text-bottom; margin-right: 5px;" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="12" cy="12" r="10" />
+                  <path d="M12 6v6l4 2" />
+                </svg>
+                오늘 신규가입
+              </h3>
             </div>
-            <div class="stat-label">이상활동 감지</div>
-            <div class="stat-value-row">
-              <div class="stat-value">0건</div>
-              <div class="stat-change" style="color:#16a34a;">안전</div>
-            </div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M9 11l3 3L22 4" />
-                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11" />
-              </svg>
-            </div>
-            <div class="stat-label">API 에러 현황</div>
-            <div class="stat-value-row">
-              <div class="stat-value">2건</div>
-              <div class="stat-change" style="color:#ef4444;">주의</div>
+            <div class="meeting-list">
+              <div id="todayRegisterUserCount" style="font-size:2rem; font-weight:700;">-</div>
+              <div style="margin-top:7px; color:#7E22CE;">+2</div>
             </div>
           </div>
-        </div>
-      </div>
+
+        </div> </div>
     </main>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
