--- a/meetings.html
+++ b/meetings.html
@@ -185,6 +185,7 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/static/js/app.js"></script>
   <script src="/static/js/meetings.js"></script>
+  <script src="/static/js/chatbot.js"></script>
 </body>
 
 </html>
