refactor: [FE] 설정 가이드 회의록 부분 수정

--- a/settings.html
+++ b/settings.html
@@ -649,7 +649,6 @@
                                 </div>
                                 <div class="tip-box">
                                     <h4>💡 참석자 등록의 장점</h4>
-                                    <p>• 회의록에서 발화자를 자동으로 구분해줍니다</p>
                                     <p>• 나중에 "장문선이 참석한 회의" 같은 검색이 가능합니다</p>
                                     <p>• 회의 후 각 참석자별 할 일을 따로 확인할 수 있습니다</p>
                                 </div>
@@ -657,7 +656,7 @@
                         </div>
 
                         <div class="scenario-box">
-                            <div class="scenario-header">STEP 3: 하이라이트 키워드 설정 (선택)</div>
+                            <div class="scenario-header">STEP 3: 하이라이트 키워드 설정</div>
                             <div class="scenario-content">
                                 <p style="margin-bottom: 12px;">회의 중 중요하게 다룰 키워드를 미리 등록하면, 해당 단어가 나올 때 하이라이트 됩니다.</p>
                                 <div class="best-practice-grid">
@@ -726,7 +725,6 @@
                                     <h4>🎯 녹음 중 알아두면 좋은 것</h4>
                                     <p>• 녹음 중에도 "일시정지" 가능 (화장실, 휴식 시간 등)</p>
                                     <p>• 자동 스크롤 기능으로 최신 대화 자동 표시</p>
-                                    <p>• 발화자별로 색상이 다르게 표시됩니다</p>
                                 </div>
                             </div>
                         </div>
@@ -738,18 +736,16 @@
                                 <div class="feature-box">
                                     <strong>대화 기록 화면 구성</strong>
                                     <ul>
-                                        <li><strong>발화자 이름:</strong> 누가 말했는지 표시</li>
+                                        <li><strong>참석자 이름:</strong> 회의 참석자 표시</li>
                                         <li><strong>시간 정보:</strong> 몇 시 몇 분에 말했는지 표시</li>
-                                        <li><strong>하이라이트:</strong> 설정한 키워드는 노란색으로 강조</li>
+                                        <li><strong>하이라이트:</strong> 설정한 키워드를 강조</li>
                                         <li><strong>자동 스크롤:</strong> 체크하면 최신 대화로 자동 이동</li>
                                     </ul>
                                 </div>
                                 <div class="example-box">
                                     <p><strong>화면 예시:</strong><br>
-                                    [10:23] 장문선<br>
-                                    <span style="background: #fef3c7; padding: 2px 4px; border-radius: 3px;">예산</span>은 총 500만원으로 확정했습니다.<br><br>
-                                    [10:24] 김나운<br>
-                                    네, 그럼 <span style="background: #fef3c7; padding: 2px 4px; border-radius: 3px;">일정</span>은 언제까지인가요?</p>
+                                    [10:23] <span style="background: #d4fec7; padding: 2px 4px; border-radius: 3px;">예산</span>은 총 500만원으로 확정했습니다.<br><br>
+                                    [10:24] 네, 그럼 <span style="background: #c7e3fe; padding: 2px 4px; border-radius: 3px;">일정</span>은 언제까지인가요?</p>
                                 </div>
                             </div>
                         </div>
@@ -757,10 +753,10 @@
                         <div class="scenario-box">
                             <div class="scenario-header">하이라이트 알림</div>
                             <div class="scenario-content">
-                                <p style="margin-bottom: 12px;">설정한 키워드가 대화에 나오면 화면 우측 하단에 알림이 뜹니다.</p>
+                                <p style="margin-bottom: 12px;">설정한 키워드가 대화 중 등장하면, 해당 단어가 회의록에서 자동으로 강조 표시됩니다.</p>
                                 <div class="chat-example">
                                     <div class="bot-msg">🔔 "예산" 키워드 감지!</div>
-                                    <div class="bot-msg">📍 [10:23] 장문선님 발언에서 발견</div>
+                                    <div class="bot-msg">📍 해당 대화 문장에 하이라이트 효과 적용</div>
                                 </div>
                                 <div class="tip-box">
                                     <h4>✨ 하이라이트 활용법</h4>
@@ -787,8 +783,7 @@
                         <div class="final-tip">
                             <h4>⏱️ 녹음 시간 안내</h4>
                             <p style="color: #075985; font-size: 14px; margin-top: 8px;">
-                                • 우측 상단 타이머로 현재 녹음 시간 확인<br>
-                                • 발화 개수로 얼마나 많은 대화가 오갔는지 확인<br>
+                                • 우측 타이머로 현재 녹음 시간 확인<br>
                                 • 참석자 목록으로 누가 회의에 참여했는지 확인
                             </p>
                         </div>
@@ -1002,7 +997,7 @@
                             <div class="scenario-content">
                                 <div class="feature-box">
                                     <strong>Q. 녹음 중간에 실수로 창을 닫으면 어떻게 되나요?</strong>
-                                    <p style="margin-top: 8px; color: #374151;">A. 걱정 마세요! 그 시점까지의 녹음은 자동 저장됩니다. 다시 들어가서 "녹음 시작"을 누르면 이어서 녹음할 수 있어요.</p>
+                                    <p style="margin-top: 8px; color: #374151;">A. 걱정 마세요! 그 시점까지의 녹음은 자동 저장됩니다.<p>
                                 </div>
 
                                 <div class="feature-box">
